<resources>
    <string name="app_name">Avantee Lender</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="dasbor">Dasbor</string>
    <string name="portofolio">Portofolio</string>
    <string name="portofolioinvest">Portofolio Investasi</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="img">img</string>
    <string name="aktif">Aktif</string>
    <string name="pending">Pending</string>
    <string name="selesai">Selesai</string>
    <string name="wt1">Avantee siap menjembatani pemberi dana dan peminjam</string>
    <string name="wt1d">Dengan sistem tekfin peer to peer, kami siap menjembatani kebutuhan pendanaan pelaku UKM, sekaligus menjadi sarana pemodalan alternatif bagi para pemberi pinjaman.</string>
    <string name="title_wt5">Mulailah pendanaan Anda bersama kami</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="penarikan_dana">Penarikan dana</string>
    <string name="title_wt2">Bersama kita dukung UKM Indonesia</string>
    <string name="des_wt2">Kami ajak anda untuk berperan aktif dalam mengembangkan sektor UKM sebagai urat nadi pendorong perekonomian nasional.</string>
    <string name="title_wt4">Profesional dan berpengalaman</string>
    <string name="des_wt4">Dikelola oleh para profesional yang berpengalaman di bidang perbankan komersial, perbankan investasi, dan teknologi informasi.</string>
    <string name="title_wt3">Nyaman dan menguntungkan</string>
    <string name="des_wt3">Kemudahan pendanaan dengan beragam pilihan UKM yang memberikan imbal hasil yang sangat menarik.</string>
    <string name="ojk_logo">OJK Logo</string>
    <string name="ojk_registered">Berizin dan diawasi oleh</string>
    <string name="member_of">Anggota dari</string>
    <string name="in_process_verification">Akun Anda sedang dalam tahap proses verifikasi oleh kami. Mohon menunggu beberapa saat.</string>
    <string name="register">Daftar</string>
    <string name="email">Email</string>
    <string name="referral_id">Referral ID (opsional)</string>
    <string name="ive_read">Saya telah membaca dan setuju dengan</string>
    <string name="terms_and_condition">Syarat &amp; Ketentuan Avantee</string>
    <string name="register_as_lender">Daftar sebagai pemberi dana</string>
    <string name="otp_verification">Verifikasi OTP</string>
    <string name="otp_desc">Masukkan kode verifikasi yang telah dikirimkan melalui SMS ke nomor anda</string>
    <string name="resend_in">Kirim ulang kode dalam </string>
    <string name="register_success">Pendaftaran berhasil</string>
    <string name="register_success_message">Akun berhasil didaftarkan sebagai peminjam di Avantee. Silakan masuk kembali menggunakan nomor handphone dan kata sandi Anda.</string>
    <string name="register_complete">Pendaftaran selesai</string>
    <string name="registed_complete_message">Mohon menunggu proses verifikasi akun oleh tim kami.</string>
    <string name="resend_email_title">Kirim ulang email verifikasi</string>
    <string name="resend_email_failed">Pengiriman tautan kirim ulang email verifikasi gagal, silahkan cek kembali email yang Anda isikan.</string>
    <string name="resend_email_desc">Masukkan alamat email Anda dan kami akan mengirimkan ulang email berisi tautan untuk memverifikasi akun Anda.</string>
    <string name="not_have_npwp">Saya belum mempunyai NPWP</string>
    <string name="login">Masuk</string>
    <string name="remember_me">Ingat saya</string>
    <string name="forgot_password">Lupa kata sandi?</string>
    <string name="login_as_lender">Masuk sebagai pemberi dana</string>
    <string name="update_pass_done">Berhasil ubah password</string>
    <string name="lets_login_again">Silahkan masuk dengan password baru Anda.</string>
    <string name="reset_password">Atur ulang kata sandi</string>
    <string name="reset_password_email">Masukkan alamat email Anda dan kami akan mengirimkan email berisi tautan untuk mengatur ulang kata sandi.</string>
    <string name="reset_password_desc">Masukkan no. handphone Anda dan kami akan mengirimkan SMS berisi tautan untuk mengatur ulang kata sandi.</string>
    <string name="reset">Atur ulang</string>
    <string name="reset_failed">Pengiriman tautan atur ulang kata sandi gagal, silahkan cek kembali email yang Anda isikan</string>
    <string name="reset_message">Klik tautan dalam SMS tersebut untuk mengatur ulang kata sandi Anda.</string>
    <string name="set_new_pass_failed">Atur ulang kata sandi gagal. Silahkan coba beberapa saat lagi.</string>
    <string name="change_pass_failed">Ubah kata sandi gagal. Pastikan password saat ini sudah benar.</string>
    <string name="welcome_message">Selamat bergabung menjadi\npemberi dana di Avantee</string>
    <string name="new_user_form_desc">Bantu kami untuk mengenal Anda lebih baik melalui pengisian data dan dokumen. Avantee menjamin kerahasiaan informasi yang Anda berikan.</string>
    <string name="fill_form">Isi\nformulir</string>
    <string name="document_picture">Foto\ndokumen</string>
    <string name="wait_verification">Tunggu\nverifikasi</string>
    <string name="under_verification">Akun dalam verifikasi</string>
    <string name="start_filling_forms">Mulai pengisian formulir</string>
    <string name="under_verification_message">Persetujuan memerlukan waktu hingga 24 jam. Kami akan memberi kabar via SMS. jangan keluar atau menghapus aplikasi ini.</string>
    <string name="sms_sent">SMS terkirim</string>
    <string name="resend">Kirim ulang</string>
    <string name="phone_number">No. handphone</string>
    <string name="password">Kata sandi</string>
    <string name="retype_password">Ulangi kata sandi</string>
    <string name="cancel">Batalkan</string>
    <string name="next">Selanjutnya</string>
    <string name="prev">Sebelumnya</string>
    <string name="back">Kembali</string>
    <string name="use">Gunakan</string>
    <string name="take_again">Foto ulang</string>
    <string name="ive_read_2">Saya telah membaca dan setuju dengan Syarat dan Ketentuan Avantee diatas</string>
    <string name="verify">Verifikasi</string>
    <string name="lender_type">Tipe pemberi dana</string>
    <string name="individual_lender">Pemberi dana perseorangan</string>
    <string name="individual_desc">Individu yang melakukan suatu pendanaan dalam bentuk penanaman modal atas suatu produk keuangan dalam kurun waktu tertentu, dengan mempertimbangkan semua resiko yang ada.</string>
    <string name="institute_lender">Pemberi dana institusi</string>
    <string name="institute_desc">Perusahaan, lembaga, atau institusi yang berbadan hukum, termasuk lembaga yang mengelola dana seperti asuransi, dana pensiun, multifinance, dll.</string>
    <string name="company_data">Data perusahaan</string>
    <string name="narahubung_data">Data narahubung</string>
    <string name="company_type">Tipe perusahaan</string>
    <string name="company_establishment">Tahun pendirian</string>
    <string name="business_field">Bidang usaha</string>
    <string name="company_is_online_based">Perusahaan berbasis internet?</string>
    <string name="company_income">Pendapatan perusahaan</string>
    <string name="company_phone">No. telepon perusahaan</string>
    <string name="company_fax">No. fax perusahaan (opsional)</string>
    <string name="company_desc">Deskripsi perusahaan</string>
    <string name="narahubung_name">Nama narahubung</string>
    <string name="narahubung_phone">No. Telepon narahubung</string>
    <string name="narahubung_position">Jabatan narahubung</string>
    <string name="narahubung_email">Email narahubung</string>
    <string name="narahubung_ktp">No. KTP narahubung</string>
    <string name="name_same_as_narahubung">Nama sama dengan nama narahubung</string>
    <string name="address_based_akta">Alamat perusahaan sesuai akta</string>
    <string name="address_based_operasional">Alamat operasional perusahaan</string>
    <string name="address_same_as_akta">Alamat sama dengan akta</string>
    <string name="take_narahubung_ktp_photo">Ambil foto KTP narahubung</string>
    <string name="take_narahubung_npwp_photo">Ambil foto NPWP narahubung</string>
    <string name="take_narahubung_selfie_photo">Ambil foto selfie narahubung</string>
    <string name="bith_date_narahubung">Tanggal lahir narahubung</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="phone_not_valid">No. handphone tidak valid</string>
    <string name="personal_data">Data pribadi</string>
    <string name="full_name">Nama lengkap</string>
    <string name="gender">Jenis kelamin</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="rather_not_say">Lainnya</string>
    <string name="marriage_status">Status perkawinan</string>
    <string name="birth_place">Tempat lahir</string>
    <string name="date_of_birth">Tanggal lahir</string>
    <string name="religion">Agama</string>
    <string name="last_education">Pendidikan terakhir</string>
    <string name="home_phone_number">No. telepon rumah (opsional)</string>
    <string name="work_info">Data pekerjaan</string>
    <string name="occupation">Pekerjaan</string>
    <string name="job_field">Bidang pekerjaan</string>
    <string name="monthly_salary">Penghasilan per bulan</string>
    <string name="is_online_based">Pekerjaan berbasis internet?</string>
    <string name="work_experience">Lama bekerja</string>
    <string name="jabatan">Jabatan</string>
    <string name="company_name">Nama perusahaan</string>
    <string name="company_number">No. telepon perusahaan (opsional)</string>
    <string name="company_address">Alamat perusahaan</string>
    <string name="funds_source">Sumber dana</string>
    <string name="addresses">Data alamat</string>
    <string name="country">Negara</string>
    <string name="address">Alamat</string>
    <string name="province">Provinsi</string>
    <string name="city">Kota/Kabupaten</string>
    <string name="sub_district">Kecamatan</string>
    <string name="urban">Kelurahan</string>
    <string name="postal_code">Kode pos</string>
    <string name="rt">RT (contoh: 001)</string>
    <string name="rw">RW (contoh: 001)</string>
    <string name="home_owned_status">Status kepemilikan rumah</string>
    <string name="address_on_KTP">Alamat sesuai KTP</string>
    <string name="domicile_address">Alamat tempat tinggal</string>
    <string name="work_address">Alamat tempat bekerja</string>
    <string name="domicile_same_as_KTP">Alamat saat ini sama dengan KTP</string>
    <string name="work_same_as_KTP">Alamat bekerja sama dengan KTP</string>
    <string name="other_family_member">Data keluarga tidak serumah</string>
    <string name="bank_info">Informasi rekening</string>
    <string name="bank_name">Nama bank</string>
    <string name="account_name">Nama pemilik rekening</string>
    <string name="name">Nama</string>
    <string name="account_number">No. rekening</string>
    <string name="avg_transaction">Rata-rata transaksi</string>
    <string name="essential_document">Dokumen pendukung</string>
    <string name="KTP_number">No. KTP</string>
    <string name="take_photo_of_ktp">Ambil foto KTP</string>
    <string name="afpi_logo">AFPI Logo</string>
    <string name="logo">Logo</string>
    <string name="mulai">Mulai</string>
    <string name="filter">Filter</string>
    <string name="sembilanpuluh_day_left">90 hari terakhir</string>
    <string name="reset_eng">Reset</string>
    <string name="terapkan">Terapkan</string>
    <string name="status">Status</string>
    <string name="berhasil">Berhasil</string>
    <string name="trans_type">Tipe transaksi</string>
    <string name="periode_of_trans">Periode transaksi</string>
    <string name="pick_range_time">Pilih rentang waktu</string>
    <string name="pembayaran">Pembayaran</string>
</resources>